--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,10 +41,13 @@ $body-bg: #ffffff;
 $text-primary: #0091C7;
 
 @import "node_modules/bootstrap/scss/bootstrap";
-
+nav {
+  height: 80px;
+}
 .navbar {
   &-brand {
-    width: 80px;
+    width: 140px;
+    margin-right: 40px;
   }
   &-list {
   }
@@ -80,10 +83,11 @@ $text-primary: #0091C7;
   }
   &-cover{
     background-image: url('/images/women-run.jpg');
-    width: 100%;
+    //width: 100%;
     height: 600px;
-    background-size: cover;
-    object-fit: contain;
+    background-size: 100%;
+    background-position: 0% 20%;
+    background-repeat: no-repeat;
   }
   &-info {
     text-transform: uppercase;
@@ -91,6 +95,9 @@ $text-primary: #0091C7;
     border-top: 3px solid #F26522;
     border-bottom: 3px solid #F26522;
     font-family: 'Montserrat-BoldItalic';
+  }
+  &-image {
+    width: 490px;
   }
   &-button {
     background: #F26522;
@@ -100,7 +107,7 @@ $text-primary: #0091C7;
     transform: skew(-21deg);
     font-size: 14px;
     border: none;
-    padding: 4px 16px;
+    padding: 8px 22px;
     display: inline-block;
   }
   &-btn {
@@ -124,7 +131,11 @@ $text-primary: #0091C7;
   &-text {
     font-family: 'Montserrat-Light';
     font-size: 14px;
-    line-spacing: 8px;
+    line-height: 30px;
+    width: 95%;
+  }
+  &-sat {
+    font-size: 12px;
   }
   &-small {
     font-size: 20px;
@@ -132,6 +143,7 @@ $text-primary: #0091C7;
   &-placard {
     top: 45%;
     left: 10px;
+    -webkit-filter: drop-shadow(0.5px 0.5px 0px #F26522);
   }
   &-gray {
     color: #6c757d;
@@ -164,6 +176,7 @@ $text-primary: #0091C7;
     font-weight: bold;
     font-size: 16px;
     margin-bottom: 8px;
+    margin-top: 16px;
   }
   &-divider {
     width: 100%;
@@ -235,6 +248,32 @@ $text-primary: #0091C7;
     color: #ffffff;
     border-top: 1px solid #ffffff;
   }
+  &-hexbutton {
+    position: relative;
+    width: 100px;
+    height: 30px;
+    background: #001641;
+    text-transform: uppercase;
+    border: 2px solid #F26522;
+    font-family: 'Montserrat-MediumItalic';
+    color: #ffffff;
+    font-size: 12px;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 80% 50%, 100% 100%, 0% 100%, 30% 10%, 30% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%, 10% 0%, 10% 100%);
+  }
+  &-hexblue {
+    position: relative;
+    width: 100px;
+    height: 30px;
+    background: #001641;
+    text-transform: uppercase;
+    border: 2px solid #0091C7;
+    font-family: 'Montserrat-MediumItalic';
+    color: #ffffff;
+    font-size: 12px;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 80% 50%, 100% 100%, 0% 100%, 30% 10%, 30% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%, 10% 0%, 10% 100%);
+  }
   &-fresh {
     font-size: 20px;
     font-family: 'Montserrat-Light';
@@ -250,6 +289,31 @@ $text-primary: #0091C7;
     display: inline-block;
   }
 
+}
+.material-icons {
+  color: #F26522;
+  font-size: 22px;
+}
+.input-group {
+  font-family: 'Lato-Regular';
+  color: #000000;
+  font-size: 12px;
+
+  &-text {
+    background: #ffffff;
+    border-right: none;
+    border-radius: 0;
+  }
+  &-prepend {
+    background: none !important;
+  }
+}
+.form-control {
+  border-radius: 0;
+  height: 50px;
+  border-left: 0;
+  border-right: 0;
+  padding-left: 0;
 }
 //@media (max-width: 576px) {
 //  .navbar-expand-lg {
