add social icons

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -178,6 +178,13 @@ nav {
     margin-bottom: 8px;
     margin-top: 16px;
   }
+  &-footer {
+    font-size: 14px;
+    font-family: 'Montserrat-BoldItalic';
+  }
+  &-social {
+    font-size: 18px;
+  }
   &-divider {
     width: 100%;
     height: 400px;
