--- a/css/style.css
+++ b/css/style.css
@@ -7746,6 +7746,11 @@ nav {
     font-size: 16px;
     margin-bottom: 8px;
     margin-top: 16px; }
+  .run-desktop-footer {
+    font-size: 14px;
+    font-family: 'Montserrat-BoldItalic'; }
+  .run-desktop-social {
+    font-size: 18px; }
   .run-desktop-divider {
     width: 100%;
     height: 400px;
