--- a/sass/main.scss
+++ b/sass/main.scss
@@ -286,6 +286,9 @@ nav {
     font-family: 'Montserrat-Light';
     width: 80%;
   }
+  &-shownav {
+    display: none;
+  }
   &-cool {
     background:  #0091C7;
     transform: skew(-21deg);
@@ -322,10 +325,142 @@ nav {
   border-right: 0;
   padding-left: 0;
 }
-//@media (max-width: 576px) {
-//  .navbar-expand-lg {
-//    display: none !important;
-//  }
-//}
+@media (max-width: 576px) {
+  .navbar-expand-lg {
+    display: none !important;
+  }
+  .run-desktop {
+    &-wrapper {
+      width: 90%;
+    }
+    &-cover {
+      background-size: cover;
+      padding-left: 1rem !important;
+      padding-right: 1rem !important;
+    }
+    &-coverage {
+      padding-left: 1rem !important;
+      padding-right: 1rem !important;
+      height: auto;
+    }
+    &-about {
+      display: none;
+    }
+    &-info {
+      font-size: 16px;
+      width: 100% !important;
+      display: block;
+      margin-top: 1rem !important;
+    }
+    &-small {
+      font-size: 14px;
+    }
+    &-background {
+      margin-top: 3rem !important;
+    }
+    &-buttoncover {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+    &-coverbtn {
+      margin-right: 12px !important;
+    }
+    &-race {
+      margin-left: 1rem !important;
+      margin-right: 1rem !important;
+    }
+    &-separator {
+      display: none;
+    }
+    &-cardflex {
+      display: flex;
+      width: 100% !important;
+      justify-content: center;
+      flex-direction: row;
+      margin-left: 0.5rem !important;
+      margin-right: 0;
+    }
+    &-slanted:after {
+      width: 16em;
+    }
+    &-fresh {
+      width: 100%;
+      font-size: 14px;
+    }
+    &-newsletter {
+      margin-right: 0.5rem !important;
+      margin-left: 0 !important;
+      text-align: center;
+    }
+    &-footer {
+      display: block;
+      &-container {
+        text-align: center;
+        font-family: 'Montserrat-Light';
+        font-size: 12px;
+      }
+      &-social {
+        display: block !important;
+        padding-bottom: 3rem;
+      }
+    }
+    &-platform {
+      padding: 0 3rem;
+    }
+    &-header {
+      display: none;
+      &-span {
+        display: block;
+        margin-top: 3px !important;
+      }
+    }
+    &-shownav {
+      display: block;
+      margin-top: -22px;
+      &-image {
+        width: 190px;
+      }
+      &-flex {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-search {
+        color: #fff;
+        font-size: 32px;
+      }
+    }
+    &-divider {
+      padding-left: 1rem !important;
+      padding-right: 1rem !important;
+      height: 350px;
+    }
+    &-card {
+      &-cover {
+        margin-bottom: 1rem;
+        width: 100%;
+      }
+    }
+  }
+  .navbar-toggler-icon{
+    color: #fff;
+    font-size: 40px;
+  }
+  .navbar-toggler {
+    background: none;
+    border-radius: 0;
+    border: none;
+  }
+  button:focus {
+    outline: none;
+  }
+  .material-icons {
+    font-size: 20px !important;
+  }
+  .form-control {
+    border-left: 0;
+    border-right: 0;
+  }
+}
 
 
