--- a/css/style.css
+++ b/css/style.css
@@ -7874,6 +7874,213 @@ nav {
   border-right: 0;
   padding-left: 0; }
 
+@media (max-width: 1024px) {
+  .run-desktop-wrapper {
+    width: 100%; }
+  .run-desktop-image {
+    width: 280px;
+    margin-top: 3rem !important; }
+  .run-desktop-text {
+    width: 100%; }
+  .run-desktop-border {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important; }
+  .run-desktop-cover {
+    background-size: cover;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important; }
+  .run-desktop-coverage {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    height: auto; }
+  .run-desktop-small {
+    font-size: 14px; }
+  .run-desktop-background {
+    margin-top: 3rem !important; }
+  .run-desktop-buttoncover {
+    display: flex;
+    justify-content: center;
+    width: 100%; }
+  .run-desktop-coverbtn {
+    margin-right: 12px !important; }
+  .run-desktop-race {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important; }
+  .run-desktop-separator {
+    display: block; }
+  .run-desktop-cardflex {
+    display: flex;
+    width: 100% !important;
+    justify-content: center;
+    flex-direction: row;
+    margin-left: 0.5rem !important;
+    margin-right: 0; }
+  .run-desktop-slanted:after {
+    width: 20em; }
+  .run-desktop-fresh {
+    width: 100%;
+    font-size: 14px; }
+  .run-desktop-newsletter {
+    margin-right: 0.5rem !important;
+    margin-left: 0 !important;
+    text-align: center; }
+  .run-desktop-platform {
+    padding: 0 9rem; }
+  .run-desktop-placard {
+    top: 42%;
+    left: 10px;
+    position: absolute; }
+  .run-desktop-header {
+    display: none; }
+    .run-desktop-header-span {
+      display: block;
+      margin-top: 3px !important; }
+  .run-desktop-divider {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    height: 400px; }
+  .run-desktop-card-cover {
+    margin-bottom: 1rem;
+    width: 100%;
+    padding-left: 0; }
+  .run-desktop-card-header {
+    height: 70px; }
+  .navbar-toggler-icon {
+    color: #fff;
+    font-size: 40px; }
+  .navbar-toggler {
+    background: none;
+    border-radius: 0;
+    border: none; }
+  button:focus {
+    outline: none; }
+  .material-icons {
+    font-size: 20px !important; }
+  .form-control {
+    border-left: 0;
+    border-right: 0;
+    width: 100%; } }
+
+@media (max-width: 768px) {
+  .navbar-expand-lg {
+    display: none !important; }
+  .run-desktop-wrapper {
+    display: block !important;
+    width: 50%;
+    margin: 0 auto; }
+  .run-desktop-cover {
+    background-size: cover;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important; }
+  .run-desktop-coverage {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    height: auto; }
+  .run-desktop-placard {
+    top: 35%;
+    left: 10px;
+    position: absolute; }
+  .run-desktop-text {
+    width: 100%;
+    font-size: 12px; }
+  .run-desktop-information {
+    margin-left: 1.5rem !important;
+    font-size: 18px; }
+  .run-desktop-border {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    margin-right: 0 !important; }
+  .run-desktop-about {
+    display: block;
+    padding-left: 0 !important;
+    padding-right: 0 !important; }
+  .run-desktop-info {
+    font-size: 16px;
+    display: block;
+    margin-top: 1rem !important; }
+  .run-desktop-small {
+    font-size: 14px; }
+  .run-desktop-background {
+    margin-top: 3rem !important; }
+  .run-desktop-buttoncover {
+    display: flex;
+    justify-content: center;
+    width: 100%; }
+  .run-desktop-coverbtn {
+    margin-right: 12px !important; }
+  .run-desktop-race {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important; }
+  .run-desktop-separator {
+    display: block; }
+  .run-desktop-cardflex {
+    display: flex;
+    width: 100% !important;
+    justify-content: center;
+    flex-direction: row;
+    margin-left: 0.5rem !important;
+    margin-right: 0; }
+  .run-desktop-slanted:after {
+    width: 20em; }
+  .run-desktop-fresh {
+    width: 100%;
+    font-size: 14px; }
+  .run-desktop-newsletter {
+    margin-right: 0.5rem !important;
+    margin-left: 0 !important;
+    text-align: center; }
+  .run-desktop-platform {
+    padding: 0 10.5rem; }
+  .run-desktop-header {
+    display: none; }
+    .run-desktop-header-span {
+      display: block;
+      margin-top: 3px !important; }
+  .run-desktop-form-flex {
+    margin-left: 0 !important; }
+  .run-desktop-form-button {
+    margin-right: 15rem !important; }
+  .run-desktop-gray {
+    height: 40px; }
+  .run-desktop-date {
+    height: 50px; }
+  .run-desktop-director {
+    margin-left: 1.5rem !important; }
+  .run-desktop-fresh {
+    margin-left: 1.5rem !important; }
+  .run-desktop-directory {
+    margin-left: 1.5rem !important; }
+  .run-desktop-divider {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    height: 400px; }
+  .run-desktop-card-cover {
+    margin-bottom: 1rem;
+    width: 100%;
+    padding-left: 0; }
+  .run-desktop-card-header {
+    height: 100px;
+    margin-top: 3rem; }
+  .navbar-toggler-icon {
+    color: #fff;
+    font-size: 40px; }
+  .navbar-toggler {
+    background: none;
+    border-radius: 0;
+    border: none; }
+  button:focus {
+    outline: none; }
+  .material-icons {
+    font-size: 20px !important; }
+  .form {
+    width: 170%; }
+  .input-group {
+    margin-right: 0 !important;
+    margin-left: 2rem !important; }
+  .form-control {
+    border-left: 0;
+    border-right: 0; } }
+
 @media (max-width: 576px) {
   .navbar-expand-lg {
     display: none !important; }
@@ -7958,7 +8165,8 @@ nav {
     height: 350px; }
   .run-desktop-card-cover {
     margin-bottom: 1rem;
-    width: 100%; }
+    width: 100%;
+    padding-left: 0; }
   .navbar-toggler-icon {
     color: #fff;
     font-size: 40px; }
