--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,15 +71,20 @@ nav {
     text-transform: uppercase;
     padding: 4px 0;
     width: 38%;
+    height: 90px;
       h3 {
-        font-size: 24px;
+        font-size: 36px;
         font-family: 'Montserrat-Light';
         letter-spacing: 3px;
         margin-bottom: -1px;
       }
       span {
-        margin-top: -10px;
+        font-weight: 500;
       }
+  }
+  &-header-span {
+    font-size: 20px;
+    font-family: 'Montserrat';
   }
   &-cover{
     background-image: url('/images/women-run.jpg');
@@ -115,7 +120,7 @@ nav {
     text-transform: uppercase;
     font-family: 'Montserrat-BoldItalic';
     transform: skew(-21deg);
-    font-size: 14px;
+    font-size: 12px;
     border: none;
     padding: 8px 22px;
     display: inline-block;
@@ -158,7 +163,7 @@ nav {
   &-gray {
     color: #6c757d;
     font-family: "Montserrat-BoldItalic";
-    font-size: 14px;
+    font-size: 12px;
   }
   &-date {
     font-family: 'Lato-Regular';
@@ -184,7 +189,7 @@ nav {
   &-card-header {
     font-family: 'SansSerif';
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 8px;
     margin-top: 16px;
   }
